k3s/infrastructure/configs/prod/traefik/external-services/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: external-routes
spec:
  ports:
    - port: 80
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: external-routes
subsets:
  - addresses:
      - ip: 192.168.0.99 # Keepalived VIP IP
    ports:
      - port: 80
        name: http
